--- a/template-parts/post-grid-item.twig
+++ b/template-parts/post-grid-item.twig
@@ -23,3 +23,16 @@
 	</a>
 
 </div>
+.devkit-post-grid {
+ gap: 10px;
+}
+.devkit-post-grid .devkit-entry-title {
+font-size: 16px !important;
+line-height: 1.35;
+}
+.devkit-post-grid .devkit-post-excerpt {
+font-size: 14px;
+line-height: 1.35;
+max-height: 4em;
+color: #333;
+}
