--- a/template-parts/recent-posts-grid.twig
+++ b/template-parts/recent-posts-grid.twig
@@ -6,8 +6,9 @@
 
 			{% for post in devkit.recent_posts %}
 
+				Grid Item
 				{{ include( 'post-grid-item.twig' ) }}
-
+{#				{{ include( 'post-list-item.twig' ) }}#}
 			{% endfor %}
 
 		</div>
